Documentando com swager
