# src/routes/categories.routes.ts
@@ -1,10 +1,9 @@
 import { Router } from 'express';
 import multer from 'multer';
 
-import  createCategoryController  from '../modules/cars/usesCases/createCategory';
-import { listCategoriesController } from '../modules/cars/usesCases/listCategories';
-import { importCategoryController } from '../modules/cars/usesCases/importCategory';
-
+import  { CreateCategoryController }  from '../modules/cars/usesCases/createCategory/CreateCategoryController';
+import { ListCategoriesController } from '../modules/cars/usesCases/listCategories/ListCategoriesController';
+import { ImportCategoryController } from '../modules/cars/usesCases/importCategory/ImportCategoryController';
 
 const categoriesRoutes = Router()
 
@@ -12,17 +11,19 @@ const upload = multer({
   dest: './tmp',
 });
 
-categoriesRoutes.post('/', (request, response) => {
-  console.log("Reload funcionando")  
-  return createCategoryController().handle(request, response);
-});
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoriesController = new ListCategoriesController();
 
-categoriesRoutes.get('/', (request, response) => {
-  return listCategoriesController.handle(request, response)
-})
+categoriesRoutes.post('/', createCategoryController.handle);
 
-categoriesRoutes.post('/import', upload.single('file'), (request, response) => {
-  return importCategoryController.handle(request, response);
-});
+categoriesRoutes.get('/', listCategoriesController.handle);
+
+
+categoriesRoutes.post(
+    '/import',
+    upload.single('file'),
+    importCategoryController.handle
+);
 
 export   {categoriesRoutes };                                                           
