# src/routes/specifications.routes.ts
@@ -1,11 +1,11 @@
 import { Router } from 'express';
-import { createSpecificationController } from '../modules/cars/usesCases/createSpecification';
+import { CreateSpecificationController } from '../modules/cars/usesCases/createSpecification/CreateSpecificationController';
 
 const specificationsRoutes = Router();
 
+const createSpecificationController = new CreateSpecificationController();
 
-specificationsRoutes.post('/', (request, response) => {
-    return createSpecificationController.handle(request, response);
-});
+specificationsRoutes.post('/', createSpecificationController.handle);
+
 
 export { specificationsRoutes }
